<resources>
    <string name="app_name">Gasto de Vigem</string>
    <string name="distancia">Distancia</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_por_litro">KM por Litro</string>
    <string name="seu_gasto_total_ser_de">Seu gasto total será de:</string>
    <string name="r_0">R$ 0</string>
    <string name="valor_total_rs">R$ 0</string>
    <string name="calcular">Calcular</string>
    <string name="preenche_todos_campos">Preencha todos os campos!</string>
    <string name="informar_valores_validos">\"Por favor, informar valores válidos! \"</string>

</resources>